2008-12-31  Zan Dobersek  <zandobersek@gmail.com>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=22842

        Move WebKitWebView's size allocation into a proper place.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dump):
        (runTest):

Canonical link: https://commits.webkit.org/31728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39529 268f45cc-cd09-0410-ab3c-d52691b4dbfc